add validate calcform

--- a/formcalc.html
+++ b/formcalc.html
@@ -118,7 +118,7 @@
             <div class="container">
                 <input class="sbm-formcalc" type="submit">
             </div>
-        <div class="error-calc"></div>
+        <div id="error-calc"></div>
         </form>
     </div>
 </div>
