--- a/cart2.html
+++ b/cart2.html
@@ -14,21 +14,39 @@
         <nav class="menu container">
             <div class="menu_logo">
             </div>
-            <ul class="menu_list">
-                <li><a href="#">Books</a></li>
-                <li><a href="#">Writers</a></li>
-                <li><a href="#">Publishers</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-            <ul class="info_boks">
-                <li><div class="search"></div></li>
-                <li><div class="shoppingcart"></div></li>
-                <li>
-                    <div id="inner-userpic">
-                    <a id="show-popup" href="#wrap-login"><img src="img/Userpic.png" alt="userpic" width="39" height="39"></a></div>
-                </li>
-            </ul>
+            <div id="menu-all">
+                <ul class="menu_list">
+                    <li><a href="#">Books</a></li>
+                    <li><a href="#">Writers</a></li>
+                    <li><a href="#">Publishers</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+                <ul class="info_boks ">
+                    <li>
+                        <a href="" class="search"></a>
+                    </li>
+                    <li>
+                        <a href="" class="shoppingcart" ></a>
+                    </li>
+                    <li>
+                        <!--<div id="inner-userpic">-->
+                        <a href="#wrap-login" id="show-popup" class="show-button" ><img src="img/Userpic.png" alt="userpic" width="39" height="39"></a>
+                        <!--</div>-->
+                    </li>
+                </ul>
+                <ul class="menu-about">
+                    <li><a href="">Search</a></li>
+                    <li><a href="">Cart</a></li>
+                    <li><a href="">User</a></li>
+                </ul>
+            </div>
+            <div class="clearfix"></div>
+            <div class="navigation">
+                <button id="menuburger" class="burger">
+                    <span aria-hidden=true></span>
+                </button>
+            </div>
         </nav>
         <div class="container">
             <div class="cart-wrap">
@@ -255,6 +273,7 @@
 
     <script src="js/popup.js"></script>
     <script src="js/cart2.js"></script>
+    <script src="js/menu.js"></script>
 
 
 </body>
