--- a/cart2.html
+++ b/cart2.html
@@ -73,11 +73,11 @@
                             <td class="font-book-size">Hardback, 170x 215 mm</td>
                             <td class="font-book-language">English</td>
                             <td class="quantity-number">
-                                <input id="del1" type="button" value="-">
-                                <input id="number1" type="number" min="1" placeholder="0">
-                                <input id="add1" type="button" name="product" value="+">
+                                <input id="del1" class="del" type="button" value="-">
+                                <input id="number1" type="text" value="0" disabled>
+                                <input id="add1" class="add" type="button" name="product" value="+">
                             </td>
-                            <td class="font-money">$25</td>
+                            <td id="cost1" class="font-money">$25</td>
                         </tr>
                         <tr class="tr-container">
                             <td class="del-img">
@@ -91,11 +91,11 @@
                             <td class="font-book-size">Hardback, 170x 215 mm</td>
                             <td class="font-book-size">English</td>
                             <td class="quantity-number">
-                                <input id="del2" type="button" value="-">
+                                <input id="del2" class="del" type="button" value="-">
                                 <input id="number2" type="number" min="1" placeholder="0">
-                                <input id="add2" type="button" name="product" value="+">
+                                <input id="add2"  class="add" type="button" name="product" value="+">
                             </td>
-                            <td class="font-money">$25</td>
+                            <td id="cost2" class="font-money">$25</td>
                         </tr>
                         <tr class="tr-container">
                             <td class="del-img">
@@ -109,11 +109,11 @@
                             <td class="font-book-size">Hardback, 170x 215 mm</td>
                             <td class="font-book-size">English</td>
                             <td class="quantity-number">
-                                <input id="del3" type="button" value="-">
+                                <input id="del3" class="del" type="button" value="-">
                                 <input id="number3" type="number" min="1" placeholder="0">
-                                <input id="add3" type="button" name="product" value="+">
+                                <input id="add3" class="add" type="button" name="product" value="+">
                             </td>
-                            <td class="font-money">$25</td>
+                            <td id="cost3" class="font-money">$25</td>
                         </tr>
                     </table>
                 </form>
@@ -134,11 +134,11 @@
                         <table>
                             <tr>
                                 <td class="proceed-count-font1">Subtotal</td>
-                                <td class="proceed-count-font2"> $25</td>
+                                <td id="subtotal" class="proceed-count-font2"> $25</td>
                             </tr>
                             <tr>
                                 <td class="proceed-count-font3">Total</td>
-                                <td class="proceed-count-font4">$28.50</td>
+                                <td id="total" class="proceed-count-font4">$28.50</td>
                             </tr>
                         </table>
                     </div>
