--- a/cart2.html
+++ b/cart2.html
@@ -77,7 +77,7 @@
                                 <input id="number1" class="number" type="text" value="0" disabled>
                                 <input id="add1" class="add" type="button" name="product" value="+">
                             </td>
-                            <td id="cost1" class="font-money">25</td>
+                            <td class="font-money"><span>$</span><span id="cost1">25</span></td>
                         </tr>
                         <tr class="tr-container">
                             <td class="del-img">
@@ -92,10 +92,10 @@
                             <td class="font-book-size">English</td>
                             <td class="quantity-number">
                                 <input id="del2" class="del" type="button" value="-">
-                                <input id="number2" class="number" type="number" value="0" placeholder="0">
+                                <input id="number2" class="number" type="text" value="0" disabled>
                                 <input id="add2"  class="add" type="button" name="product" value="+">
                             </td>
-                            <td id="cost2" class="font-money">25</td>
+                            <td id="cost2" class="font-money"><span>$</span><span id="cost2">25</span></td>
                         </tr>
                         <tr class="tr-container">
                             <td class="del-img">
@@ -110,10 +110,10 @@
                             <td class="font-book-size">English</td>
                             <td class="quantity-number">
                                 <input id="del3" class="del" type="button" value="-">
-                                <input id="number3" class="number" type="number" value="0" placeholder="0">
+                                <input id="number3" class="number" type="text" value="0" disabled>
                                 <input id="add3" class="add" type="button" name="product" value="+">
                             </td>
-                            <td id="cost3" class="font-money">25</td>
+                            <td id="cost3" class="font-money"><span>$</span><span id="cost3">25</span></td>
                         </tr>
                     </table>
                 </form>
