add gulp and cart2.js

--- a/cart2.html
+++ b/cart2.html
@@ -74,7 +74,7 @@
                             <td class="font-book-language">English</td>
                             <td class="quantity-number">
                                 <input id="del1" class="del" type="button" value="-">
-                                <input id="number1" class="number" type="text" value="0" disabled>
+                                <input id="number1" class="number1" type="text" value="0" disabled>
                                 <input id="add1" class="add" type="button" name="product" value="+">
                             </td>
                             <td class="font-money"><span>$</span><span id="cost1">25</span></td>
@@ -92,10 +92,10 @@
                             <td class="font-book-size">English</td>
                             <td class="quantity-number">
                                 <input id="del2" class="del" type="button" value="-">
-                                <input id="number2" class="number" type="text" value="0" disabled>
+                                <input id="number2" class="number2" type="text" value="0" disabled>
                                 <input id="add2"  class="add" type="button" name="product" value="+">
                             </td>
-                            <td id="cost2" class="font-money"><span>$</span><span id="cost2">25</span></td>
+                            <td class="font-money"><span>$</span><span id="cost2">25</span></td>
                         </tr>
                         <tr class="tr-container">
                             <td class="del-img">
@@ -110,10 +110,10 @@
                             <td class="font-book-size">English</td>
                             <td class="quantity-number">
                                 <input id="del3" class="del" type="button" value="-">
-                                <input id="number3" class="number" type="text" value="0" disabled>
+                                <input id="number3" class="number3" type="text" value="0" disabled>
                                 <input id="add3" class="add" type="button" name="product" value="+">
                             </td>
-                            <td id="cost3" class="font-money"><span>$</span><span id="cost3">25</span></td>
+                            <td class="font-money"><span>$</span><span id="cost3">25</span></td>
                         </tr>
                     </table>
                 </form>
@@ -138,7 +138,7 @@
                             </tr>
                             <tr>
                                 <td class="proceed-count-font3">Total</td>
-                                <td id="total" class="proceed-count-font4">$28.50</td>
+                                <td class="proceed-count-font4"><span>$</span><span id="total">28.50</span></td>
                             </tr>
                         </table>
                     </div>
