--- a/formcalc.html
+++ b/formcalc.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="css/formcalc.css">
+    <link rel="stylesheet" href="sass/style.scss">
+    <link rel="stylesheet" href="sass/mixins.scss">
+
 </head>
 <body>
 <div class="inner-formcalc container">
