--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Bookworm</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="styles/style.scss">
     <link href="https://fonts.googleapis.com/css?family=Amiri|Lato:400,700|Ramaraja|Rozha+One|PT+Serif|Work+Sans|Yrsa" rel="stylesheet">
 </head>
 <body>
