add gulp and min.css and min.js

--- a/cart.html
+++ b/cart.html
@@ -375,19 +375,12 @@
         </div>
 
     </div>
+    <script src="js/classie.js"></script>
+    <script src="js/selectFx.js"></script>
+    <script src="js/selectsw"></script>
     <script src="js/menu.js"></script>
     <script src="js/popup.js"></script>
     <script src="js/formcart.js"></script>
-    <script src="js/classie.js"></script>
-    <script src="js/selectFx.js"></script>
-    <script>
-        (function() {
-            [].slice.call( document.querySelectorAll( 'select.cs-select' ) ).forEach( function(el) {
-                new SelectFx(el);
-            } );
-        })();
-    </script>
-
 
 
 </body>
