add del row for cart2.js

--- a/cart2.html
+++ b/cart2.html
@@ -134,11 +134,11 @@
                         <table>
                             <tr>
                                 <td class="proceed-count-font1">Subtotal</td>
-                                <td id="subtotal" class="proceed-count-font2"> $25</td>
+                                <td class="proceed-count-font2"><span>$</span><span id="subtotal">0</span></td>
                             </tr>
                             <tr>
                                 <td class="proceed-count-font3">Total</td>
-                                <td class="proceed-count-font4"><span>$</span><span id="total">28.50</span></td>
+                                <td class="proceed-count-font4"><span>$</span><span id="total">0</span></td>
                             </tr>
                         </table>
                     </div>
