--- a/cart.html
+++ b/cart.html
@@ -377,7 +377,7 @@
     </div>
     <script src="js/classie.js"></script>
     <script src="js/selectFx.js"></script>
-    <script src="js/selectsw"></script>
+    <script src="js/selectsw.js"></script>
     <script src="js/menu.js"></script>
     <script src="js/popup.js"></script>
     <script src="js/formcart.js"></script>
