--- a/formcalc.html
+++ b/formcalc.html
@@ -18,27 +18,27 @@
                 <div class="inner-rooms ">
                     <h3>Количество спален</h3>
                     <div class="block-bed form-margin">
-                        <input class="check-room" type="radio" id="bed-1" value="1" name="bed-rooms" >
+                        <input class="formInput check-room" type="radio" id="bed-1" value="1" name="bed-rooms" >
                         <label class="style-block" for="bed-1">1</label>
                     </div>
                     <div class="block-bed">
-                        <input class="check-room" type="radio" id="bed-2" value="2" name="bed-rooms">
+                        <input class="formInput check-room" type="radio" id="bed-2" value="2" name="bed-rooms">
                         <label class="style-block" for="bed-2">2</label>
                     </div>
                     <div class="block-bed">
-                        <input class="check-room" type="radio" id="bed-3" value="3" name="bed-rooms">
+                        <input class="formInput check-room" type="radio" id="bed-3" value="3" name="bed-rooms">
                         <label class="style-block" for="bed-3">3</label>
                     </div>
                     <div class="block-bed">
-                        <input class="check-room" type="radio" id="bed-4" value="4" name="bed-rooms" >
+                        <input class="formInput check-room" type="radio" id="bed-4" value="4" name="bed-rooms" >
                         <label class="style-block" for="bed-4">4</label>
                     </div>
                     <div class="block-bed">
-                        <input class="check-room" type="radio" id="bed-5" value="5" name="bed-rooms">
+                        <input class="formInput check-room" type="radio" id="bed-5" value="5" name="bed-rooms">
                         <label class="style-block" for="bed-5">5</label>
                     </div>
                     <div class="block-bed">
-                        <input class="check-room" type="radio" id="bed-6" value="6" name="bed-rooms">
+                        <input class="formInput check-room" type="radio" id="bed-6" value="6" name="bed-rooms">
                         <label class="style-block" for="bed-6">6</label>
                     </div>
                 </div>
@@ -112,7 +112,7 @@
                 </div>
             </div>
             <div class="clearfix"></div>
-    </div>
+    </div> <!--TODO: Некорректная вложенность тегов -->
     <div class="inner-result">
             <div class="result-price container"> <h1>Оценка стоимости</h1></div>
             <div id="time" class="container">0 часов</div>
