Комментарии к заданию: Оформление пользовательского контента

--- a/article.html
+++ b/article.html
@@ -98,6 +98,7 @@
                 </p>
 
                 <h2>Shakespare and Company, Paris</h2>
+                <!-- todo В контенте статьи не должно быть тегов div, за исключением блока с голубым фоном -->
                 <div class="text-title">One of the most famous and photographed independent book shops in the world,
                     Shakespeare and Company sits along the Seine River in Paris and was an expat-
                     author watering hole of sorts for some of literature's biggest names — James
@@ -115,6 +116,7 @@
                             biggest names — James Baldwin
                         </p>
                     </div>
+                    <!-- todo Нет оступа между картинкой и текстом при расширении меньше 768px. На мобильном картинка прилеплена к левому краю -->
                     <div class="article-right">
                         <img src="img/library.png" alt="library" width="263" height="263" class="align-right">
                     </div>
@@ -173,7 +175,8 @@
                     outside as this chic bookstore is on the inside, with paperback birds and mobiles hanging from
                     the ceiling and two floors of glossy covers to keep you shopping for hours.
                 </p>
-
+                <!-- todo Не соответсвует мккету при расширении меньше 768px -->
+                <!-- todo Здесь и в футере недопустимо уменьшать размер шрифта для маленьких расширений!!! -->
                 <div class="inner-article-block">
                     <div class="article-block">
                         <h5>Read the original story: Most Incredible Bookstores</h5>
@@ -203,6 +206,7 @@
             <section class="container">
                 <hr>
                 <div class="article-container">
+                    <!-- todo Неправильные отступы и перенос заголовка при расширении меньше 768px-->
                 <div class="relation-post">
                     <div class="related-item">
                         <img src="img/chinese-lamp.png" width="92" height="92" alt="image">
@@ -365,6 +369,7 @@
             </div> <!-- footer_section_about -->
 
             <div class="footer_section_about">
+                <!-- todo Недопустимо уменьшать размер шрифта для маленьких расширений!!! Блоки должны перестраиваться, а не уменьшатся-->
                 <div class="footer_section_box">
                     <div class="section_box">
                         <h3><a href="#">Ade books</a></h3>
