--- a/maps.html
+++ b/maps.html
@@ -50,7 +50,7 @@
     </nav>
 
     <div id="map"></div>
-
+    <!--<div id="mapnext"></div>-->
     <div class="inner-footer">
         <section class="wrap-footer">
             <nav class="menu_futer container">
@@ -179,3 +179,6 @@
 
 </body>
 </html>
+
+
+https://maps.googleapis.com/maps/api/distancematrix/json?units=imperial&origins=Washington,DC&destinations=New+York+City,NY&key=AIzaSyBEhcAODAYMl78I4iR9HhlCmXAuV0jmrf0
