add google map duration

--- a/cart.html
+++ b/cart.html
@@ -48,26 +48,6 @@
                 </button>
             </div>
         </nav>
-        <!--<nav class="menu container">-->
-            <!--<div class="menu_logo">-->
-            <!--</div>-->
-            <!--<ul class="menu_list">-->
-                <!--<li><a href="#">Books</a></li>-->
-                <!--<li><a href="#">Writers</a></li>-->
-                <!--<li><a href="#">Publishers</a></li>-->
-                <!--<li><a href="#">Blog</a></li>-->
-                <!--<li><a href="#">Contact</a></li>-->
-            <!--</ul>-->
-            <!--<ul class="info_boks">-->
-                <!--<li><div class="search"></div></li>-->
-                <!--<li><div class="shoppingcart"></div></li>-->
-                <!--<li>-->
-                    <!--<div id="inner-userpic">-->
-                        <!--<a href="#wrap-login" id="show-popup" class="show-button" ><img src="img/Userpic.png" alt="userpic" width="39" height="39"></a>-->
-                    <!--</div>-->
-                <!--</li>-->
-            <!--</ul>-->
-        <!--</nav>-->
 
         <div class="cart-wrap container">
             <h1>Your cart</h1>
@@ -122,7 +102,7 @@
                     <div class="form-input">
                         <div class="input-text">
                             <select id="country" name="country" class="cs-select cs-skin-country" title="country">
-                                <option value="country" disabled selected>Country</option>
+                                <!--<option value="country" disabled selected>Country</option>-->
                                 <option value="ukraine" >Ukraine</option>
                                 <option value="russion">Russian Federation</option>
                                 <option value="belarus">Belarus</option>
@@ -331,7 +311,7 @@
     </div> <!-- end inner inner-wrap-login -->
 
     <div class="inner-wrap-container">
-        <div style="margin-top: 250px; position: relative;">
+        <div>
             <div id="wrap-login">
                 <div class="inner-wrap-login">
                     <div class="transp-back-wrap-login"></div>
