--- a/maps.html
+++ b/maps.html
@@ -50,6 +50,8 @@
     </nav>
 
     <div id="map"></div>
+    <div id="output"></div>
+
     <!--<div id="mapnext"></div>-->
     <div class="inner-footer">
         <section class="wrap-footer">
