--- a/article.html
+++ b/article.html
@@ -285,16 +285,16 @@
                                                 <img class="img-arrow" src="img/icons_svg/rectangle63.png" height="4" width="6" alt="arrow">
                                                 <img class="img-line" src="img/icons_svg/shape24.png" height="13" width="13" alt="arrow">
                                                 <img src="img/oval_avatar3.png" alt="avatar">
-                                                <p class="comment-left">
+                                                <span class="comment-left">
                                                     <p class="comment-author">John Cash</p>
                                                     <p class="comment-date">15.10.16</p>
-                                                </p>
-                                                <div class="comment-to-user"><a href="#">to Tamila Drake</a></div>
-                                                <div class="actions-right">
+                                                </span>
+                                                <p class="comment-to-user"><a href="#">to Tamila Drake</a></p>
+                                                <p class="actions-right">
                                                     <a class="comment-link" href="#"><img src="img/icons_svg/rectangle62.png" width="16" height="16" alt=""></a>
                                                     <a class="comment-vote" href="#">5</a>
                                                     <a class="comment-link" href="#"><img src="img/icons_svg/rectangle61.png" width="18" height="17" alt=""></a>
-                                                </div>
+                                                </p>
                                                 <div class="clearfix"></div>
                                             </header>
                                             <p class="comment-item-text">
@@ -311,15 +311,15 @@
                                 <article class="single-comment">
                                     <header>
                                         <img src="img/oval_avatar4.png" width="39" height="39" alt="avatar">
-                                        <div class="comment-left">
-                                            <div class="comment-author">Billy Hudson</div>
-                                            <div class="comment-date">15.10.16</div>
-                                        </div>
-                                        <div class="actions-right">
+                                        <span class="comment-left">
+                                            <p class="comment-author">Billy Hudson</p>
+                                            <p class="comment-date">15.10.16</p>
+                                        </span>
+                                        <span class="actions-right">
                                             <a class="comment-link" href="#"><img src="img/icons_svg/rectangle62.png" width="16" height="16" alt=""></a>
                                             <a class="comment-vote" href="#">5</a>
                                             <a class="comment-link" href="#"><img src="img/icons_svg/rectangle61.png" width="18" height="17" alt=""></a>
-                                        </div>
+                                        </span>
                                         <div class="clearfix"></div>
                                     </header>
                                     <p class="comment-item-text">
@@ -331,10 +331,11 @@
                     </span> <!-- post users -->
                 </section>
         </article>
-        <div class="article-text show-all">
+        <span class="article-text show-all">
             <a href="#" class="show-comments">Show more comments</a>
-        </div>
+        </span>
     </div> <!-- inner article -->
+    
     <div class="inner-footer">
     <section class="wrap-footer">
         <nav class="menu_futer container">
