--- a/formcalc.html
+++ b/formcalc.html
@@ -121,8 +121,9 @@
         <div class="inner-result">
             <div class="result-price"> <h1>Оценка стоимости</h1></div>
             <div id="time">0 часов</div>
+            <div id="cost" ><span>$</span>  0  </div>
             <div class="price-off"> Цена за чистку</div>
-            <div id="cost" > $ 0  </div>
+            <div class="clearfix"></div>
             <div >
                 <input class="sbm-formcalc" type="submit">
             </div>
