--- a/formcalc.html
+++ b/formcalc.html
@@ -120,12 +120,15 @@
     <section id="block3">
         <div class="inner-result">
             <div class="result-price"> <h1>Оценка стоимости</h1></div>
-            <div id="time">0 часов</div>
-            <div id="cost" ><span>$</span>  0  </div>
+            <span id="time">0</span><span class="time-style" >hours</span>
+            <div class="clearfix"></div>
+            <span class="time-min" >* Минимальное время 2 часа</span>
+            <div class="clearfix"></div>
+            <span class="cost-money">$</span><span id="cost">0</span>
             <div class="price-off"> Цена за чистку</div>
             <div class="clearfix"></div>
             <div >
-                <input class="sbm-formcalc" type="submit">
+                <input class="sbm-formcalc" type="submit" value="Заказать">
             </div>
             <div id="error-calc"></div>
         </div>
