--- a/cart2.html
+++ b/cart2.html
@@ -30,9 +30,7 @@
                         <a href="" class="shoppingcart" ></a>
                     </li>
                     <li>
-                        <!--<div id="inner-userpic">-->
                         <a href="#wrap-login" id="show-popup" class="show-button" ><img src="img/Userpic.png" alt="userpic" width="39" height="39"></a>
-                        <!--</div>-->
                     </li>
                 </ul>
                 <ul class="menu-about">
@@ -74,10 +72,10 @@
                             <td class="font-book-language">English</td>
                             <td class="quantity-number">
                                 <input id="del1" class="del" type="button" value="-">
-                                <input id="number1" class="number" type="text" value="0" disabled>
+                                <input id="number1" class="number" type="text" value="1" disabled>
                                 <input id="add1" class="add" type="button" name="product" value="+">
                             </td>
-                            <td class="font-money"><span>$</span><span class="cost">25</span></td>
+                            <td class="font-money"><span>$</span><span class="cost">5</span></td>
                         </tr>
                         <tr class="tr-container">
                             <td class="del-img">
@@ -92,10 +90,10 @@
                             <td class="font-book-size">English</td>
                             <td class="quantity-number">
                                 <input id="del2" class="del" type="button" value="-">
-                                <input id="number2" class="number" type="text" value="0" disabled>
+                                <input id="number2" class="number" type="text" value="1" disabled>
                                 <input id="add2"  class="add" type="button" name="product" value="+">
                             </td>
-                            <td class="font-money"><span>$</span><span class="cost">25</span></td>
+                            <td class="font-money"><span>$</span><span class="cost">15</span></td>
                         </tr>
                         <tr class="tr-container">
                             <td class="del-img">
@@ -110,7 +108,7 @@
                             <td class="font-book-size">English</td>
                             <td class="quantity-number">
                                 <input id="del3" class="del" type="button" value="-">
-                                <input id="number3" class="number" type="text" value="0" disabled>
+                                <input id="number3" class="number" type="text" value="1" disabled>
                                 <input id="add3" class="add" type="button" name="product" value="+">
                             </td>
                             <td class="font-money"><span>$</span><span class="cost">25</span></td>
@@ -163,23 +161,13 @@
             </nav>
             <div class="clearfix"></div>
             <div class="footer_content container ">
-                <div class="footer_section_about">
+                <div class="section-left">
                     <div class="section_about_header">
                         <h2>About</h2>
                         <p>Cras quis nulla commodo, aliquam lectus sed, blandit augue.
                             Cras ullamcorper bibendum bibendum. Duis tincidunt urna non pretium porta.
                             Nam condimentum vitae ligula vel ornare. Phasellus at semper turpis.</p>
                     </div>
-                    <div class="footer_section_active">
-                        <h2>Stay in touch</h2>
-                        <form action="" name="subscribe-form" class="subscribe-form">
-                            <input type="email" id="fname" name="fname" placeholder="Your E-mail">
-                            <button class="subscribe-button" type="submit">Subscribe</button>
-                        </form>
-                    </div>
-                </div> <!-- footer_section_about -->
-
-                <div class="footer_section_about">
                     <div class="footer_section_box">
                         <div class="section_box">
                             <h3><a href="#">Ade books</a></h3>
@@ -207,6 +195,18 @@
                                 Sales</p>
                         </div>
                     </div>
+
+                </div> <!-- section-left -->
+
+                <div class="section-right">
+                    <div class="footer_section_active">
+                        <h2>Stay in touch</h2>
+                        <form action="" name="subscribe-form" class="subscribe-form">
+                            <input type="email" id="fname" name="fname" placeholder="Your E-mail">
+                            <button class="subscribe-button" type="submit">Subscribe</button>
+                        </form>
+                    </div>
+
                     <div class="footer_social">
                         <h2>Follow us</h2>
                         <div class="social_icon">
@@ -218,7 +218,7 @@
                             </ul>
                         </div>
                     </div>
-                </div> <!-- footer_section_about -->
+                </div> <!-- section-right -->
 
                 <div class="footer_info">
                     <p class="footer-info-left" >&#169; 2016 Bookworm. All rights reserved</p>
