--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                 <a class="book-title">The Meandering Corpse</a>
                 <a class="book-author">Richard Prather</a>
             </div>
-            <div class="book-item">
+            <div class="book-item red-queen">
                 <a href="#">
                     <img class="book-img relative" src="img/books/red_queen.png" alt="Cover he English Detective Stories" width="146"                                height="227">
                 </a>
